<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/vlille_list_item_status_offline"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_informations" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF9C25"
            android:layout_gravity="center"
            android:text="@string/station_details_offline_label"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="12"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/station_details_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/station_details_address"
            android:textSize="18sp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/station_details_cb"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:gravity="center"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cb"/>
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station_detail_cb_label"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_margin="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="5dp">
                <TextView
                    android:text="@string/station_details_vlille_label"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/station_details_vlille"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="5dp">
                <TextView
                    android:text="@string/station_details_attach_label"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/station_details_attachs"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/station_details_distance"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/locate_station"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/station_details_go_label"
                android:drawableRight="@drawable/ic_location"
                android:layout_gravity="end" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>