<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/container"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:padding="20dp"
                android:layout_gravity="center_horizontal">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:weightSum="4"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_number_items_list_label"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:textColor="@color/primary"
                        android:gravity="end"
                        android:layout_gravity="end" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberSigned"
                        android:id="@+id/settings_number_items_list"
                        android:textColor="@color/primary"
                        android:layout_gravity="center_horizontal"
                        android:gravity="end" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_number_items_list_hint"
                    android:textSize="14sp"
                    android:textColor="@color/primary_dark"
                    android:gravity="end"
                    android:layout_gravity="end" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="20dp"
                    android:weightSum="4"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_precision_label"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:textColor="@color/primary"
                        android:gravity="end"
                        android:layout_gravity="end" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberSigned"
                        android:id="@+id/settings_precision"
                        android:textColor="@color/primary"
                        android:gravity="end"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_precision_hint"
                    android:textSize="14sp"
                    android:textColor="@color/primary_dark"
                    android:gravity="end"
                    android:layout_gravity="end" />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/settings_indicator_label"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <View
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="20dp"
                        android:background="@color/indicator_low"/>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:textColor="@color/primary"
                        android:textSize="18sp"
                        android:text="Limite basse"/>
                    <EditText
                        android:textColor="@color/indicator_low"
                        android:id="@+id/settings_indicator_low"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/primary"
                        android:textSize="18sp"
                        android:text="@string/settings_indicators_inf_equals"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <View
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="20dp"
                        android:background="@color/indicator_middle"/>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:textColor="@color/primary"
                        android:textSize="18sp"
                        android:text="Limite moyenne"/>
                    <EditText
                        android:textColor="@color/indicator_middle"
                        android:id="@+id/settings_indicator_middle"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/primary"
                        android:textSize="18sp"
                        android:text="@string/settings_indicators_inf_equals"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <View
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="20dp"
                        android:background="@color/indicator_high"/>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:textColor="@color/primary"
                        android:textSize="18sp"
                        android:text="Limite haute"/>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/primary"
                        android:textSize="18sp"
                        android:text="@string/settings_indicators_sup"/>
                    <TextView
                        android:textColor="@color/indicator_high"
                        android:id="@+id/settings_indicator_high"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/settings_save"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/settings_save_label" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>